# rust-cmake-vcpkg

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresetsBase.json  Cargo.toml  WSL_DEBUG_SETUP.md  project.code-workspace  vcpkg-configuration.json  vcpkg.json
cmake/: compiler_flags.cmake  installation.cmake  target_helpers.cmake  version_details.cmake
cpp/: CMakePresetsBase.json
cpp/cmake/: clear_install.cmake  compiler_flags.cmake
cpp/src/by2/by2/: by2.h
cpp/src/ccore/: CMakeLists.txt
cpp/src/ccore/ccore/: ccore.hpp
cpp/vcpkg_scripts/toolchains/: clang-20-toolchain-aarch64.cmake  clang-20-toolchain.cmake
cpp/vcpkg_scripts/triplets/: x64-linux-clang-20.cmake
docs/: flutter_bridge.md
flutter/: main.dart
flutter/by2_ui/: README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
flutter/by2_ui/android/app/: build.gradle.kts
flutter/by2_ui/android/app/src/main/: AndroidManifest.xml
flutter/by2_ui/ios/Runner.xcodeproj/: project.pbxproj
flutter/by2_ui/lib/: main.dart
flutter/by2_ui/lib/src/rust/: frb_generated.dart
flutter/by2_ui/lib/src/rust/api/: simple.dart
flutter/by2_ui/linux/flutter/: generated_plugins.cmake
flutter/by2_ui/linux/runner/: my_application.cc
flutter/by2_ui/macos/Runner.xcodeproj/: project.pbxproj
flutter/by2_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/by2_ui/macos/Runner/Configs/: AppInfo.xcconfig
flutter/by2_ui/rust_builder/: pubspec.yaml
flutter/by2_ui/rust_builder/android/: build.gradle  settings.gradle
flutter/by2_ui/rust_builder/cargokit/build_tool/lib/src/: builder.dart
flutter/by2_ui/rust_builder/ios/: rust_lib_by2_ui.podspec
flutter/by2_ui/rust_builder/linux/: CMakeLists.txt
flutter/by2_ui/rust_builder/macos/: rust_lib_by2_ui.podspec
flutter/by2_ui/rust_builder/windows/: CMakeLists.txt
flutter/by2_ui/web/: index.html  manifest.json
flutter/by2_ui/windows/runner/: Runner.rc  main.cpp
rust/: Cargo.toml
rust/src/app/: Cargo.toml
rust/src/app/src/: main.rs
rust/src/bridge/: Cargo.toml  build.rs
rust/src/by2_api/: Cargo.toml  cargokit.yaml
rust/src/by2_api/src/: frb_generated.rs
rust/src/by2_api/src/api/: simple.rs
src/: CMakeLists.txt
src/app/: Cargo.toml  build.rs
src/bridge/: Cargo.toml  build.rs
src/bridge/src/: lib.rs
src/by2/: CMakeLists.txt  by2.cpp
src/by2/by2/: by2.h
src/by2_api/src/api/: simple.rs
src/by2_ui/: README.md  flutter_rust_bridge.yaml  pubspec.yaml
src/by2_ui/android/app/src/main/kotlin/com/example/by2_ui/: MainActivity.kt
src/by2_ui/integration_test/: simple_test.dart
src/by2_ui/ios/Runner/: Info.plist
src/by2_ui/lib/: main.dart
src/by2_ui/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
src/by2_ui/linux/: CMakeLists.txt
src/by2_ui/rust_builder/android/: build.gradle
src/by2_ui/rust_builder/android/src/main/: AndroidManifest.xml
src/by2_ui/rust_builder/ios/: rust_lib_by2_ui.podspec
src/by2_ui/rust_builder/linux/: CMakeLists.txt
src/by2_ui/rust_builder/macos/: rust_lib_by2_ui.podspec
src/by2_ui/rust_builder/windows/: CMakeLists.txt
src/by2_ui/windows/: CMakeLists.txt
src/by2_ui/windows/flutter/: generated_plugins.cmake
src/by2bridge/: CMakeLists.txt
src/ccore/: CMakeLists.txt  ccore.cpp
src/docs/: wsl_llvm_setup.md  wsl_vcpkg_setup.md
src/rcore/: Cargo.toml
vcpkg_scripts/overlay/ffmpeg_/: 0001-create-lib-libraries.patch  0002-fix-msvc-link.patch  0003-fix-windowsinclude.patch  0004-fix-debug-build.patch  0005-fix-nasm.patch  0006-fix-StaticFeatures.patch  0007-fix-lib-naming.patch  0011-Fix-x265-detection.patch  0012-Fix-ssl-110-detection.patch  0020-fix-aarch64-libswscale.patch  0022-fix-iconv.patch  0024-fix-gcc13-binutils.patch  FindFFMPEG.cmake.in  build.sh.in  portfile.cmake  vcpkg.json
vcpkg_scripts/overlay/octomap/: 001-fix-exported-targets.patch  portfile.cmake  vcpkg.json
vcpkg_scripts/toolchains/: clang-20-toolchain-aarch64.cmake  clang-20-toolchain.cmake  gcc-13-toolchain.cmake
vcpkg_scripts/triplets/: aarch64-linux-clang-15.cmake  x64-linux-clang-20.cmake  x64-linux-gcc-13.cmake  x64-windows-static-md-v142.cmake  x64-windows-static-v142.cmake
